fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,12 @@
   margin: 0;
   padding: 0;
 }
+.hideScrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hideScrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
